--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css?family=Damion|Poppins&display=swap" rel="stylesheet">
+
     <title>Ever Pretty Beauty Studio</title>
   </head>
   <body>
