--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Damion|Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
+
 
     <title>Ever Pretty Beauty Studio</title>
   </head>
